# mrp_project

./: .gitignore  Motor Response Data.xlsx  README.md  dockerfile  requirements.txt
Hardware Design Files/: Electronic Enclosure - TopDown.SLDDRW  Electronic Enclosure.SLDASM  Electronic Enclosure.SLDDRW  Motor Enclosure - No Walls.SLDASM  Motor Enclosure - No Walls.SLDDRW  Motor Enclosure - With Wheels.SLDASM  Motor Enclosure.SLDASM  steering system specs.xlsx
Hardware Design Files/2.1 Chassis/: 8020 - CornerBracket.SLDPRT  Depth_AluminumExtrusion.SLDPRT  Horizontal_AluminumExtrusion.SLDPRT
Hardware Design Files/2.2 Power Management System/: Charger Box Assembly.SLDASM
Hardware Design Files/2.4 Locomotion System/: 91239A160_Button Head Hex Drive Screw.SLDPRT  98490A170_Steel Woodruff Key.SLDPRT  BattleKits 6-inch Drive Wheel.SLDPRT  Motor.SLDPRT  Quarter-inch Square Key.SLDPRT  (+2 more)
example/: CallingArduino.py  nav_stack_odometry.cpp  remote_velocity_control.ino  velocity_from_ticks.ino
old/: client.py
src/: server.py
src/jetson/dev_ws/src/mrp/: CMakeLists.txt  package.xml
src/jetson/dev_ws/src/mrp/config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
src/jetson/dev_ws/src/mrp/description/: inertial_macros.xacro  lidar.xacro  mrp_core.xacro  robot.urdf.xacro  ros2_control.xacro
src/jetson/dev_ws/src/mrp/launch/: launch_robot.launch.py  launch_robot_nav.launch.py  launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
src/jetson/dev_ws/src/mrp/rviz/: nav_view.rviz  odom_view.rviz  robot_model_view.rviz  slam_view.rviz
(+93 files in other folders)
