<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mrp-project@todo.todo">mrp project</maintainer>
  <license>TODO: License declaration</license>

  <depend>robot_state_publisher</depend>
  <depend>rplidar_ros</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>slam_toolbox</depend>
  <depend>twist_mux</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
